2022-08-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/template.rb: Added demonstration program included in gem package

2022-08-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/d658e6772d75bce52fbe46cc9789f0b33500bc0f ) and added raylib v4.2.0 features ( https://github.com/raysan5/raylib/releases/tag/4.2.0 )

2022-07-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/core_storage_values.rb: Removed ( see https://github.com/raysan5/raylib/commit/e722a8dbef59cf0ecccf141af61e1e1c8a24849f )
	* examples/core_drop_files.rb: Updated ( see https://github.com/raysan5/raylib/commit/b8f67c628553cb9199f51efc9b20eb5991d58e8f )
	* Updated DLLs
	* examples/textures_sprite_anim.rb: Added
	* examples/textures_gif_player.rb: Added

2022-07-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/49a534b5d478fd2f195380143ded4f0ab764c228 ) / and raygui ( https://github.com/raysan5/raygui/commit/9c826f213f5b287159a0b0e1a0670a27c09dcc7e )
	* physac_dll now refers new repository ( https://github.com/raysan5/physac )

2022-06-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/70ec71a373db426685590127122e77bfd66cbf69 ) / and raygui ( https://github.com/raysan5/raygui/commit/47269f30ce55f0399096d1bee4188b8b8c0d7186 )
	* Updated submodules appropriately

2022-04-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* script/rebuild_libs_windows.cmd: Added
	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/5c66cc1c9bb4a3ae4af7cc6f82a521137ed5484d ) / Updated submodules appropriately 
	* [Windows] Updated DLLs with the latest raylib ( https://github.com/raysan5/raylib/commit/5c66cc1c9bb4a3ae4af7cc6f82a521137ed5484d ) and raygui ( https://github.com/raysan5/raygui/commit/865bb293764073c01e74314ef647464f1f10fd96 )
	* [macOS] Updated DLLs with the latest raylib
